--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
 .App {
   text-align: center;
+  margin-top: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.MuiBox-root {
+  background-color: #1976d2;
+  border-radius: 4px;
   color: white;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  letter-spacing: 0.02857em;
+  text-transform: uppercase;
+  line-height: 1.75;
+  padding: 6px 16px;
 }
 
-.App-link {
-  color: #61dafb;
+img {
+  height : 100px;
+  width : auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.MuiInputBase-root {
+  margin-bottom: 0.5rem;
+}
+
+.result, .historic {
+  margin: 0.5rem;
 }
